# rust-xp-monkey-interpreter

./: .gitignore  Cargo.toml  DEPLOYMENT.md  README.md  WEB_README.md  app.js  build.sh  index.html  justfile  main.js  monkey_rs.js  monkey_rs_bg.wasm  styles.css  test.html  tree-walker.html  vm.js
.github/workflows/: deploy.yml
monkey_examples/: game_of_life.monkey  while_loop.monkey
src/: ast.rs  cli.rs  evaluator.rs  lexer.rs  lib.rs  main.rs  object.rs  parser.rs  repl.rs  token.rs  wasm.rs
src/code/: mod.rs
src/compiler/: mod.rs  symbol_table.rs
src/evaluator/: builtins.rs  mod.rs
src/object/: builtins.rs  environment.rs  mod.rs
src/parser/: lexer.rs  mod.rs  token.rs
src/vm/: evaluation_stack.rs  frame.rs  mod.rs
website/: README.md  app.js  example_test.html  index.html  main.js  monkey_rs.js  monkey_rs_bg.wasm  styles.css  test.html
