[package]
name = "monkey_rs"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
clap = { version = "4.5.46", features = ["derive"] }
fnv = "1.0.7"                                        # for hashing

# web assembly stuff
wasm-bindgen = "0.2"
js-sys = "0.3"
wasm-bindgen-futures = "0.4"
futures-channel = "0.3"
web-sys = { version = "0.3", features = ["Window"] }
